# TallerII2016C2TPLinkedIn

./: .gitignore  .travis.yml  README.md  after-deploy.sh  before-deploy.sh  buildProject.sh  completelyCleanDocker.sh  deploy.sh  dockerizeSharedServer.sh  install-dependencies.sh  run-tests.sh  sharedServerDockerCompose.yml  test.js
AppServer/: .cproject  .gitignore  .project  AppServer  CMakeLists.txt  Dockerfile  Makefile  README.md  buildPackage.sh  buildServer.sh  coverage.sh  install-dependencies.sh  install_libs.sh
AppServer/include/common/: Curl.h  Exceptions.h  Logger.h  User.h  Utils.h  req_res.h
AppServer/include/database/: DBChat.h  DBConstants.h  DBExceptions.h  DBJSON.h  DBRaw.h  DataBases.h  DatosUsuario.h  Fecha.h  Foto.h  Geolocacion.h  JpegWrapper.h  JsonChecker.h  Puesto.h
AppServer/include/handlers/: ConnectionsHandler.h  DB_Handler.h  DELETE_Handler.h  DataBasesHandler.h  GCM_Connector.h  GET_Handler.h  HTTPRequestHandler.h  POST_Handler.h  PUT_Handler.h  RequestHandler.h  SharedServerConnector.h  SharedServerHandler.h
AppServer/include/log4cpp/: Makefile  Makefile.in
AppServer/include/log4cpp/threading/: Makefile  Makefile.in
AppServer/include/parsers/: HttpParser.h  JsonParser.h
AppServer/include/server/: API_HttpRequest.h  API_Server.h  Server.h
AppServer/include/test/: DELETE_HandlerTest.h  GET_HandlerTest.h  JsonParserTest.h  LevelDBTest.h  LibTest.h  POST_HandlerTest.h  PUT_HandlerTest.h  RequestHandlerTest.h  SampleTest.h  ServerTest.h  SharedServerConnectorTest.h  UtilsTest.h
AppServer/include/users/: User.h
AppServer/src/: AppServer.cpp
AppServer/src/base64/: base64.cpp
AppServer/src/common/: Curl.cpp  Logger.cpp  Thread.cpp  Thread.h  req_res.h
AppServer/src/database/: DBChat.cpp  DBJSON.cpp  DBRaw.cpp  DataBases.cpp  DatosUsuario.cpp  Fecha.cpp  Foto.cpp  Geolocacion.cpp  Puesto.cpp
AppServer/src/fossa/: fossa.c
AppServer/src/handlers/: ConnectionsHandler.cpp  DB_Handler.cpp  DELETE_Handler.cpp  DataBasesHandler.cpp  GCM_Connector.cpp  GET_Handler.cpp  HTTPRequestHandler.cpp  POST_Handler.cpp  PUT_Handler.cpp  RequestHandler.cpp  SharedServerConnector.cpp  SharedServerHandler.cpp
AppServer/src/json11/: json11.cpp
AppServer/src/mongoose/: mongoose.c
AppServer/src/parsers/: HttpParser.cpp  JsonParser.cpp
AppServer/src/server/: API_Server.h  ConnectionsHandler.cpp  ConnectionsHandler.h  Server.cpp  Server.h  SharedServerHandler.cpp  SharedServerHandler.h
AppServer/test/: DBJsonTest.cpp  DBRawTest.cpp  DELETE_HandlerTest.cpp  GCM_ConnectorTest.cpp  GET_HandlerTest.cpp  JsonParserTest.cpp  LevelDBTest.cpp  LibTest.cpp  POST_HandlerTest.cpp  PUT_HandlerTest.cpp  RawDBTest.cpp  RequestHandlerTest.cpp  SampleTest.cpp  ServerTest.cpp  SharedServerConnectorTest.cpp  TestMain.cpp  UtilsTest.cpp
ClientApp/: .gitignore  install-dependencies.sh
ClientApp/apk/: app-debug-unaligned.apk  (+1 more)
Docs/: Makefile  buildhtml.sh  install-dependencies.sh
SharedServer/: .gitignore  README.md  SharedDBDockerfile  SharedDockerfile  bower.json  index.js  initiatepostgres.sh  install-dependencies.sh  package.json  pgmanagercreate.sql  sharedDB.sql
SharedServer1/: .gitignore  .project  README.md  app.js  app.js~  package.json
SharedServer2/: app.js  app.js~
StyleCheck/: checkcppstyle.sh  install-dependencies.sh
Tester/: Client.py  ClientTest.py  SharedServerTests.py  createUsers.py  initiatepostgres.sh  install-dependencies.sh  jobify_db.sql  main.py  pgmanagercreate.sql
(+171 files in other folders)
